# Proyecto-Tesis-PUCP-

./: README.md  SymArch.smp  SymmetryApplication.pro  SymmetryApplication.pro.user.242741d  common.pri
HeatDiffusionLib/: CMakeLists.txt  HeatDiffusionLib.pro
HeatDiffusionLib/doc/: HeatDiffusionLibrary.tex
HeatDiffusionLib/doc/html/: BiharmonicDistance_8h_source.html  ConmuteTimeDistance_8h_source.html  DiffusionDistance_8h_source.html  HeatKernelSignature_8h_source.html  Laplacian_8h_source.html  WaveKernelSignature_8h_source.html  annotated.html  classHeatDiffusion_1_1Descriptor_1_1HeatKernelSignature-members.html  classHeatDiffusion_1_1Descriptor_1_1HeatKernelSignature.html  classHeatDiffusion_1_1Descriptor_1_1WaveKernelSignature-members.html  classHeatDiffusion_1_1Descriptor_1_1WaveKernelSignature.html  classHeatDiffusion_1_1Distance_1_1BiharmonicDistance-members.html  classHeatDiffusion_1_1Distance_1_1BiharmonicDistance.html  classHeatDiffusion_1_1Distance_1_1ConmuteTimeDistance-members.html  classHeatDiffusion_1_1Distance_1_1ConmuteTimeDistance.html  classHeatDiffusion_1_1Distance_1_1DiffusionDistance-members.html  classHeatDiffusion_1_1Distance_1_1DiffusionDistance.html  classHeatDiffusion_1_1Laplacian-members.html  classHeatDiffusion_1_1Laplacian.html  classHeatDiffusion_1_1Vector-members.html  classHeatDiffusion_1_1Vector.html  classes.html  dir_1ad3239045547f42a44467cabd9bae0e.html  files.html  (+5 more)
HeatDiffusionLib/src/: BiharmonicDistance.cpp  ConmuteTimeDistance.cpp  DiffusionDistance.cpp  HeatKernelSignature.cpp  Laplacian.cpp  WaveKernelSignature.cpp
(+185 files in other folders)
